--- a/sites/all/themes/thinkcollege_boot/scss/_search_overrides.scss
+++ b/sites/all/themes/thinkcollege_boot/scss/_search_overrides.scss
@@ -11,11 +11,11 @@
   .tc-facet-title {
     position: relative;
     margin-bottom: .2em;
-    padding: 10px 0 10px 10px;
+    padding: 0 0 0 10px;
     color: #9a9a9a;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 1.3rem;
+    font-size: 1.6rem;
   }
 
   #edit-search-api-views-fulltext {
@@ -49,7 +49,7 @@
     padding: 10px;
     margin-bottom: 15px;
     background-color: #fff;
-    font-size: 16px;
+    font-size: 1.5rem;
     .block {
       border: none;
       -webkit-box-shadow: none;
@@ -61,6 +61,9 @@
     h2 {
       border-bottom: none;
       padding-bottom: 0;
+    }
+    .facetapi-limit-link {
+       padding-left: 10px;
     }
   }
 
@@ -87,7 +90,7 @@
   }
 
   ul.facetapi-facetapi-checkbox-links {
-    padding-left: 5px;
+    padding-left: 10px;
   }
 
   input[type="checkbox"].facetapi-checkbox {
